--- a/graph.html
+++ b/graph.html
@@ -1,6 +1,9 @@
 <html>
-<script src = graph.js></script>
     
+    
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+<script src = graph.js></script>
+
 
 
 
